--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -2,13 +2,16 @@
     text-align: center;
 }
 .nav{
-margin-top: 40px;
+    margin-top: 10px;
     background-color: rgb(92, 0, 121);
     line-height: 40px;
+    text-align: left;
+    
 }
 .nav a{
     text-decoration: none;
     color: white;
     padding: 6px;
     margin-left: 8px;
+    
 }
