--- a/src/Components/Scholar/Scholar.css
+++ b/src/Components/Scholar/Scholar.css
@@ -11,5 +11,12 @@
 }
 .scholar-cost{
     margin-left: 10px;
+    background-color: rgb(64, 15, 104);
+
+    height: 300px;
+    color: rgb(255, 250, 250);
+    text-align: center;
+    border: 1px solid;
+    box-shadow: 2px 2px 2px 2px;
    
-}
+};
